--- a/ios/TasteSync/TasteSync-Info.plist
+++ b/ios/TasteSync/TasteSync-Info.plist
@@ -26,7 +26,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.navi.reUp</string>
+	<string>com.tastesync.distribution</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
